@@ -1,3 +1,9 @@
+2004-04-18  Rodrigo Moya <rodrigo@ximian.com>
+
+	* wombat.c (setup_interface_check): made the BonoboObject not private
+	to this function only.
+	(main): unref the interface check object also.
+
 2004-02-23  JP Rosevear  <jpr@ximian.com>
 
 	* Makefile.am: don't dist the corba sources
